# parry-no_std

crates/parry2d/: Cargo.toml
crates/parry2d-f64/: Cargo.toml
crates/parry3d/: Cargo.toml
crates/parry3d-f64/: Cargo.toml
src/: lib.rs
src/bounding_volume/: aabb.rs  aabb_utils.rs  bounding_sphere.rs  mod.rs  simd_aabb.rs
src/mass_properties/: mass_properties.rs  mass_properties_trimesh3d.rs  mod.rs
src/partitioning/: mod.rs  visitor.rs
src/partitioning/qbvh/: build.rs  qbvh.rs  traversal.rs  update.rs
src/query/: default_query_dispatcher.rs  error.rs  mod.rs  query_dispatcher.rs
src/query/closest_points/: closest_points.rs
src/query/contact/: contact.rs  mod.rs
src/query/contact_manifolds/: contact_manifold.rs  contact_manifolds_composite_shape_composite_shape.rs  contact_manifolds_composite_shape_shape.rs  contact_manifolds_heightfield_composite_shape.rs  contact_manifolds_heightfield_shape.rs  contact_manifolds_trimesh_shape.rs  contact_manifolds_workspace.rs
src/query/epa/: epa2.rs  epa3.rs
src/query/gjk/: voronoi_simplex3.rs
src/query/intersection_test/: mod.rs
src/query/nonlinear_shape_cast/: mod.rs  nonlinear_shape_cast_support_map_support_map.rs
src/query/point/: point_heightfield.rs  point_query.rs  point_round_shape.rs
src/query/ray/: ray.rs  ray_aabb.rs  ray_support_map.rs  ray_triangle.rs
src/query/sat/: sat_cuboid_cuboid.rs
src/query/shape_cast/: mod.rs  shape_cast_heightfield_shape.rs
src/query/split/: mod.rs  split_trimesh.rs
src/query/visitors/: bounding_volume_intersections_simultaneous_visitor.rs  point_intersections_visitor.rs  ray_intersections_visitor.rs
src/shape/: ball.rs  capsule.rs  composite_shape.rs  compound.rs  cone.rs  convex_polygon.rs  convex_polyhedron.rs  cuboid.rs  cylinder.rs  feature_id.rs  half_space.rs  heightfield2.rs  heightfield3.rs  mod.rs  polygonal_feature2d.rs  polygonal_feature3d.rs  polygonal_feature_map.rs  polyline.rs  round_shape.rs  segment.rs  shape.rs  shared_shape.rs  tetrahedron.rs  triangle.rs  triangle_pseudo_normals.rs  trimesh.rs
src/transformation/: convex_hull2.rs  ear_clipping.rs  hertel_mehlhorn.rs  polygon_intersection.rs
src/transformation/convex_hull3/: error.rs  validation.rs
src/transformation/mesh_intersection/: mesh_intersection.rs  mesh_intersection_error.rs  triangle_triangle_intersection.rs
src/transformation/vhacd/: vhacd.rs
src/transformation/voxelization/: voxel_set.rs  voxelized_volume.rs
src/utils/: cleanup.rs  isometry_ops.rs  mod.rs  sdp_matrix.rs  segments_intersection.rs  spade.rs
