[package]
name = "parry2d"
version = "0.17.1"
authors = ["Sébastien Crozet <developer@crozet.re>"]

description = "2 dimensional collision detection library in Rust."
documentation = "https://parry.rs/docs"
homepage = "https://parry.rs"
repository = "https://github.com/dimforge/parry"
readme = "README.md"
keywords = ["collision", "geometry", "distance", "ray", "convex"]
categories = ["science", "game-development", "mathematics", "wasm"]
license = "Apache-2.0"
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[lints]
workspace = true

[features]
default = ["required-features"]
required-features = ["dim2", "f32"]
dim2 = []
f32 = []
simd-stable = ["simba/wide", "simd-is-enabled"]
simd-nightly = ["simba/portable_simd", "simd-is-enabled"]
improved_fixed_point_support = []

# Do not enable this feature directly. It is automatically
# enabled with the "simd-stable" or "simd-nightly" feature.
simd-is-enabled = []

[lib]
name = "parry2d"
path = "../../src/lib.rs"
required-features = ["required-features"]

[dependencies]
either = { version = "1", default-features = false }
bitflags = "2.3"
downcast-rs = { version = "1", default-features = false }
num-traits = { version = "0.2", default-features = false }
smallvec = "1"
arrayvec = { version = "0.7", default-features = false }
simba = { version = "0.9", default-features = false }
nalgebra = { version = "0.33", default-features = false, features = ["libm", "alloc"] }
approx = { version = "0.5", default-features = false }
num-derive = "0.4"
cust_core = { version = "0.1", optional = true }
ordered-float = { version = "4", default-features = false }
log = "0.4"
hashbrown = "0.15.0"
spade = { version = "2.9", default-features = false }

[dev-dependencies]
simba = { version = "0.9", default-features = false }
oorandom = "11"
ptree = "0.4.0"
rand = { version = "0.8" }
macroquad = "0.4.12"

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--generate-link-to-definition"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

# The following listing is to allow for examples to be scraped,
# see https://doc.rust-lang.org/rustdoc/scraped-examples.html#scraped-examples for details.
# To help with generating this list, see the script `write_examples.sh`

[[example]]
name = "aabb2d"
path = "examples/aabb2d.rs"
doc-scrape-examples = true

[[example]]
name = "ball2d"
path = "examples/ball2d.rs"
doc-scrape-examples = true

[[example]]
name = "bounding_sphere2d"
path = "examples/bounding_sphere2d.rs"
doc-scrape-examples = true

[[example]]
name = "contact_query2d"
path = "examples/contact_query2d.rs"
doc-scrape-examples = true

[[example]]
name = "convex2d"
path = "examples/convex2d.rs"
doc-scrape-examples = true

[[example]]
name = "convex_hull2d"
path = "examples/convex_hull2d.rs"
doc-scrape-examples = true

[[example]]
name = "convex_try_new2d"
path = "examples/convex_try_new2d.rs"
doc-scrape-examples = true

[[example]]
name = "cuboid2d"
path = "examples/cuboid2d.rs"
doc-scrape-examples = true

[[example]]
name = "distance_query2d"
path = "examples/distance_query2d.rs"
doc-scrape-examples = true

[[example]]
name = "plane2d"
path = "examples/plane2d.rs"
doc-scrape-examples = true

[[example]]
name = "point_in_poly2d"
path = "examples/point_in_poly2d.rs"
doc-scrape-examples = true

[[example]]
name = "polygons_intersection2d"
path = "examples/polygons_intersection2d.rs"
doc-scrape-examples = true

[[example]]
name = "polyline2d"
path = "examples/polyline2d.rs"
doc-scrape-examples = true

[[example]]
name = "proximity_query2d"
path = "examples/proximity_query2d.rs"
doc-scrape-examples = true

[[example]]
name = "solid_point_query2d"
path = "examples/solid_point_query2d.rs"
doc-scrape-examples = true

[[example]]
name = "solid_ray_cast2d"
path = "examples/solid_ray_cast2d.rs"
doc-scrape-examples = true

[[example]]
name = "time_of_impact_query2d"
path = "examples/time_of_impact_query2d.rs"
doc-scrape-examples = true
