[package]
name = "parry3d-f64"
version = "0.17.1"
authors = ["Sébastien Crozet <developer@crozet.re>"]

description = "3 dimensional collision detection library in Rust. 64-bits precision version."
documentation = "https://parry.rs/docs"
homepage = "https://parry.rs"
repository = "https://github.com/dimforge/parry"
readme = "README.md"
keywords = ["collision", "geometry", "distance", "ray", "convex"]
categories = ["science", "game-development", "mathematics", "wasm"]
license = "Apache-2.0"
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[lints]
workspace = true

[features]
default = ["required-features"]
required-features = ["dim3", "f64"]
dim3 = []
f64 = []
simd-stable = ["simba/wide", "simd-is-enabled"]
simd-nightly = ["simba/portable_simd", "simd-is-enabled"]
# Adds `TriMesh:to_obj_file` function.
wavefront = ["obj"]
improved_fixed_point_support = []

# Do not enable this feature directly. It is automatically
# enabled with the "simd-stable" or "simd-nightly" feature.
simd-is-enabled = []

[lib]
name = "parry3d_f64"
path = "../../src/lib.rs"
required-features = ["required-features"]

[dependencies]
either = { version = "1", default-features = false }
bitflags = "2.3"
downcast-rs = { version = "1", default-features = false }
num-traits = { version = "0.2", default-features = false }
smallvec = "1"
arrayvec = { version = "0.7", default-features = false }
simba = { version = "0.9", default-features = false }
nalgebra = { version = "0.33", default-features = false, features = ["libm", "alloc"] }
approx = { version = "0.5", default-features = false }
num-derive = "0.4"
cust_core = { version = "0.1", optional = true }
rstar = "0.12.0"
obj = { version = "0.10.2", optional = true }
hashbrown = "0.15.0"
spade = { path = "D:/spade-no_std", default-features = false }

log = "0.4"
ordered-float = { version = "4", default-features = false }

[dev-dependencies]
oorandom = "11"
ptree = "0.5.0"
rand = { version = "0.8" }

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--generate-link-to-definition"]
features = ["wavefront"]
