[package]
name = "parry3d"
version = "0.17.1"
authors = ["Sébastien Crozet <developer@crozet.re>"]

description = "3 dimensional collision detection library in Rust."
documentation = "https://parry.rs/docs"
homepage = "https://parry.rs"
repository = "https://github.com/dimforge/parry"
readme = "README.md"
keywords = ["collision", "geometry", "distance", "ray", "convex"]
categories = ["science", "game-development", "mathematics", "wasm"]
license = "Apache-2.0"
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[lints]
workspace = true

[features]
default = ["required-features"]
required-features = ["dim3", "f32"]
dim3 = []
f32 = []

simd-stable = ["simba/wide", "simd-is-enabled"]
simd-nightly = ["simba/portable_simd", "simd-is-enabled"]
# Adds `TriMesh:to_obj_file` function.
wavefront = ["obj"]
improved_fixed_point_support = []

# Do not enable this feature directly. It is automatically
# enabled with the "simd-stable" or "simd-nightly" feature.
simd-is-enabled = []

[lib]
name = "parry3d"
path = "../../src/lib.rs"
required-features = ["required-features"]

[dependencies]
either = { version = "1", default-features = false }
bitflags = "2.3"
downcast-rs = { version = "1", default-features = false }
num-traits = { version = "0.2", default-features = false }
smallvec = "1"
arrayvec = { version = "0.7", default-features = false }
simba = { version = "0.9", default-features = false }
nalgebra = { version = "0.33", default-features = false, features = ["libm", "alloc"] }
approx = { version = "0.5", default-features = false }
num-derive = "0.4"
cust_core = { version = "0.1", optional = true }
log = "0.4"
ordered-float = { version = "4", default-features = false }
rstar = "0.12.0"
obj = { version = "0.10.2", optional = true }
hashbrown = "0.15.0"
spade = { version = "2.9", default-features = false }

[dev-dependencies]
oorandom = "11"
ptree = "0.4.0"
rand = { version = "0.8" }
macroquad = "0.4.12"
nalgebra = { version = "0.33", default-features = false, features = ["rand"] }
rand_isaac = "0.3"

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--generate-link-to-definition"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
features = ["wavefront"]

# The following listing is to allow for examples to be scraped,
# see https://doc.rust-lang.org/rustdoc/scraped-examples.html#scraped-examples for details.
# To help with generating this list, see the script `write_examples.sh`

[[example]]
name = "aabb3d"
path = "examples/aabb3d.rs"
doc-scrape-examples = true

[[example]]
name = "ball3d"
path = "examples/ball3d.rs"
doc-scrape-examples = true

[[example]]
name = "bounding_sphere3d"
path = "examples/bounding_sphere3d.rs"
doc-scrape-examples = true

[[example]]
name = "capsule"
path = "examples/capsule.rs"
doc-scrape-examples = true

[[example]]
name = "cone"
path = "examples/cone.rs"
doc-scrape-examples = true

[[example]]
name = "contact_query3d"
path = "examples/contact_query3d.rs"
doc-scrape-examples = true

[[example]]
name = "convex3d"
path = "examples/convex3d.rs"
doc-scrape-examples = true

[[example]]
name = "convex_hull3d"
path = "examples/convex_hull3d.rs"
doc-scrape-examples = true

[[example]]
name = "convex_try_new3d"
path = "examples/convex_try_new3d.rs"
doc-scrape-examples = true

[[example]]
name = "cuboid3d"
path = "examples/cuboid3d.rs"
doc-scrape-examples = true

[[example]]
name = "cylinder"
path = "examples/cylinder.rs"
doc-scrape-examples = true

[[example]]
name = "distance_query3d"
path = "examples/distance_query3d.rs"
doc-scrape-examples = true

[[example]]
name = "getting_started"
path = "examples/getting_started.rs"
doc-scrape-examples = true

[[example]]
name = "mesh3d"
path = "examples/mesh3d.rs"
doc-scrape-examples = true

[[example]]
name = "plane3d"
path = "examples/plane3d.rs"
doc-scrape-examples = true

[[example]]
name = "plane_intersection"
path = "examples/plane_intersection.rs"
doc-scrape-examples = true

[[example]]
name = "polyline3d"
path = "examples/polyline3d.rs"
doc-scrape-examples = true

[[example]]
name = "proximity_query3d"
path = "examples/proximity_query3d.rs"
doc-scrape-examples = true

[[example]]
name = "solid_point_query3d"
path = "examples/solid_point_query3d.rs"
doc-scrape-examples = true

[[example]]
name = "solid_ray_cast3d"
path = "examples/solid_ray_cast3d.rs"
doc-scrape-examples = true

[[example]]
name = "time_of_impact_query3d"
path = "examples/time_of_impact_query3d.rs"
doc-scrape-examples = true
